# app-repl-numa-benchmarks

./: .gitignore  .gitmodules  README.md  analyze_runtime.py  bench.fio  bench.sh  bench_ann.py  bench_fio.py  bench_llama.py  bench_micro.py  bench_repl.sh  bench_rocksdb.py  collect_mem.py  config.py  justfile  main.py  mod_annoy.py  mod_faiss.py  mod_usearch.py  monitoring.py  one_node_cpus_interleaved.py  plot_ann.py  plot_fio.py  plot_llama.py  plot_microbench.py  plot_monitoring.py  plot_rocksdb.py  pyproject.toml  run.py  run_ann.py
ann/: lib.py  mod_usearch.py
fio-3.40/engines/: mmap.c
fio-3.40/tools/fiograph/: fiograph.conf
microbench/: Makefile  bench_alloc.c  bench_common.h  bench_mem.c  bench_pgtable.c
provision/: install.sh  justfile  run_bench.sh  setup_carrefour.sh  start_virtu.sh
provision/data/: zenith_0.14.1-1_amd64.deb
provision/data/config/: larochette-config  larochette-config-baseline  tall-config  tall-config-6.14  tall-config-baseline  tall-config-baseline-6.14  yeti-config  yeti-config-baseline  yeti-config-baseline-6.14
provision/data/helix/: config.toml  languages.toml
provision/data/virtu/: user-data
provision/qemu_pin/: README.md  main.py  pyproject.toml
results/Apple_M4_Pro_ARM_8/: sift-128-euclidean-default.csv
results/INTELR_XEONR_PLATINUM_8568Y+_X86_64/ann/: gist-960-euclidean-details.csv  gist-960-euclidean.csv  glove-100-angular-details.csv  glove-100-angular.csv  sift-128-euclidean-details.csv  sift-128-euclidean.csv
results/macOS-15.5-arm64-arm-64bit-Mach-O/: sift-128-euclidean-default.csv
(+681 files in other folders)
